exports[`Default`] = `
<div
  className="">
  <div
    className="">
    <i
      className=" undefined bi bi-buffer" />
  </div>
  <span
    className=" ">
    Buffer
  </span>
  <span
    className="">
    
  </span>
</div>
`;

exports[`Subtitle`] = `
<div
  className="">
  <div
    className="">
    <i
      className=" undefined bi bi-buffer" />
  </div>
  <span
    className=" ">
    Buffer
  </span>
  <span
    className="">
     NavBar
  </span>
</div>
`;
